--- a/templates/Breast_cancer.html
+++ b/templates/Breast_cancer.html
@@ -87,23 +87,23 @@
         <div class="col-md-6">
           <div class="mb-3">
             <label class="form-label">radius_mean</label>
-            <input type="number" step="0.001" min="0" class="form-control" name="radius_mean" required />
+            <input type="number" step="0.01" min="6.0" max="30.0" class="form-control" name="radius_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">texture_mean</label>
-            <input type="number" step="0.01" min="0" class="form-control" name="texture_mean" required />
+            <input type="number" step="0.01" min="9.0" max="40.0" class="form-control" name="texture_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">perimeter_mean</label>
-            <input type="number" step="0.01" min="0" class="form-control" name="perimeter_mean" required />
+            <input type="number" step="0.01" min="40.0" max="200.0" class="form-control" name="perimeter_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">area_mean</label>
-            <input type="number" step="0.1" min="0" class="form-control" name="area_mean" required />
+            <input type="number" step="1" min="100.0" max="2600.0" class="form-control" name="area_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">smoothness_mean</label>
-            <input type="number" step="0.00001" min="0" class="form-control" name="smoothness_mean" required />
+            <input type="number" step="0.001" min="0.05" max="0.20" class="form-control" name="smoothness_mean" required />
           </div>
         </div>
 
@@ -111,23 +111,23 @@
         <div class="col-md-6">
           <div class="mb-3">
             <label class="form-label">compactness_mean</label>
-            <input type="number" step="0.00001" min="0" class="form-control" name="compactness_mean" required />
+            <input type="number" step="0.001" min="0.01" max="0.40" class="form-control" name="compactness_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">concavity_mean</label>
-            <input type="number" step="0.00001" min="0" class="form-control" name="concavity_mean" required />
+            <input type="number" step="0.001" min="0.0" max="0.45" class="form-control" name="concavity_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">concave points_mean</label>
-            <input type="number" step="0.000001" min="0" class="form-control" name="concave points_mean" required />
+            <input type="number" step="0.001" min="0.0" max="0.25" class="form-control" name="concave points_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">symmetry_mean</label>
-            <input type="number" step="0.0001" min="0" class="form-control" name="symmetry_mean" required />
+            <input type="number" step="0.001" min="0.1" max="0.35" class="form-control" name="symmetry_mean" required />
           </div>
           <div class="mb-3">
             <label class="form-label">fractal_dimension_mean</label>
-            <input type="number" step="0.00001" min="0" class="form-control" name="fractal_dimension_mean" required />
+            <input type="number" step="0.001" min="0.05" max="0.10" class="form-control" name="fractal_dimension_mean" required />
           </div>
         </div>
 
@@ -215,7 +215,7 @@
       if (window.lastResult == 1) {
         doc.text("Prediction Result:  Malignant Breast Cancer", 14, y);
       } else {
-        doc.text("Prediction Result:  Menign Breast Lesion", 14, y);
+        doc.text("Prediction Result:  Benign Breast Lesion", 14, y);
       }
 
       fetch("/Breast_cancer", {
@@ -293,7 +293,7 @@
           document.getElementById("adviceContent").innerHTML = getAdvice(parseInt(data.result));
 
           // Save prediction globally if needed later
-          window.lastPrediction = data.result;
+          window.lastResult = data.result;
         });
     });
 
