--- a/templates/liver.html
+++ b/templates/liver.html
@@ -87,7 +87,7 @@
         <div class="col-md-6">
           <div class="mb-3">
             <label class="form-label">Age</label>
-            <input type="number" class="form-control" name="Age" min="0" required />
+            <input type="number" class="form-control" name="Age" min="4" max="90" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Gender</label>
@@ -99,15 +99,15 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Total_Bilirubin (mg/dL)</label>
-            <input type="number" step="0.1" class="form-control" name="Total_Bilirubin" min="0" required />
+            <input type="number" step="0.1" class="form-control" name="Total_Bilirubin" min="0.1" max="75.0" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Direct_Bilirubin (mg/dL)</label>
-            <input type="number" step="0.1" class="form-control" name="Direct_Bilirubin" min="0" required />
+            <input type="number" step="0.1" class="form-control" name="Direct_Bilirubin" min="0" max="20.0" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Alkaline_Phosphotase (IU/L)</label>
-            <input type="number" class="form-control" name="Alkaline_Phosphotase" min="0" required />
+            <input type="number" class="form-control" name="Alkaline_Phosphotase" min="63" max="2110" required />
           </div>
         </div>
 
@@ -115,23 +115,23 @@
         <div class="col-md-6">
           <div class="mb-3">
             <label class="form-label">Alamine_Aminotransferase (IU/L)</label>
-            <input type="number" class="form-control" name="Alamine_Aminotransferase" min="0" required />
+            <input type="number" class="form-control" name="Alamine_Aminotransferase" min="10" max="2000" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Aspartate_Aminotransferase (IU/L)</label>
-            <input type="number" class="form-control" name="Aspartate_Aminotransferase" min="0" required />
+            <input type="number" class="form-control" name="Aspartate_Aminotransferase" min="10" max="5000" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Total_Protiens (g/dL)</label>
-            <input type="number" step="0.1" class="form-control" name="Total_Protiens" min="0" required />
+            <input type="number" step="0.1" class="form-control" name="Total_Protiens" min="2.0" max="10.0" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Albumin (g/dL)</label>
-            <input type="number" step="0.1" class="form-control" name="Albumin" min="0" required />
+            <input type="number" step="0.1" class="form-control" name="Albumin" min="0.9" max="6.5" required />
           </div>
           <div class="mb-3">
             <label class="form-label">Albumin_and_Globulin_Ratio</label>
-            <input type="number" step="0.01" class="form-control" name="Albumin_and_Globulin_Ratio" min="0" required />
+            <input type="number" step="0.1" class="form-control" name="Albumin_and_Globulin_Ratio" min="0.1" max="3.0" required />
           </div>
         </div>
 
@@ -220,7 +220,7 @@
       if (window.lastResult == 1) {
         doc.text("Prediction Result:  Positive (Liver Disease Detected)", 14, y);
       } else {
-        doc.text("Prediction Result:  Negetive (Safe from Chronic Kidney Disease)", 14, y);
+        doc.text("Prediction Result:  Negetive (Safe from liver Disease)", 14, y);
       }
 
       fetch("/liver", {
@@ -297,7 +297,7 @@
           document.getElementById("adviceContent").innerHTML = getAdvice(parseInt(data.result));
 
           // Save prediction globally if needed later
-          window.lastPrediction = data.result;
+          window.lastResult = data.result;
         });
     });
 
